openshift-v4/templates/crunchydb/NetworkPolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-crunchydb-ha
  labels:
    postgres-operator.crunchydata.com/cluster: hippo-ha
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: hippo-ha
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: hippo-ha
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 2022
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-crunchydb-monitoring
  labels:
    postgres-operator.crunchydata.com/cluster: hippo-ha
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: hippo-ha
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: 0ab226
              environment: tools
      ports:
        - protocol: TCP
          port: 9187
